# aras_antivirus

./: .gitignore  AUTO_UPDATER.md  README.md  electron-builder.yml  package-lock.json  package.json  prd_mole_windows_electron.md  start-aras-hidden.vbs  start-aras.bat  start.sh  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
.github/workflows/: release.yml
app/main/: index.ts
app/main/ipc/: handlers.ts
app/preload/: index.ts
app/renderer/: index.html
backend/ps/: analyze-disk.ps1  app-uninstaller.ps1  defender-scan.ps1  dev-servers.ps1  docker-cleanup.ps1  editor-cleanup.ps1  file-explorer.ps1  installer-cleanup.ps1  live-guard.ps1  network-monitor.ps1  node-modules-bulk.ps1  process-events.ps1  process-monitor.ps1  process-tree.ps1  quarantine.ps1  realtime-watch.ps1  repo-scan.ps1  run-clean.ps1  run-purge.ps1  scan-clean.ps1  scan-purge.ps1  secret-sweep.ps1  security-scan.ps1  status.ps1  system-optimize.ps1  usb-monitor.ps1  virustotal.ps1  vuln-scan.ps1  web-protection.ps1
scripts/: check-perf.ps1  set-desktop-shortcut-icon.ps1
src-tauri/: Cargo.toml  aras-updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: guard.rs  history.rs  mod.rs  ps.rs  quarantine.rs  settings.rs  system.rs  threat.rs  updater.rs  window.rs  yara.rs
src-tauri/src/services/: activity.rs  guard.rs  history.rs  mod.rs  notify.rs  paths.rs  ps_host.rs  quarantine.rs  scheduled.rs  settings.rs  sqlite.rs  threat.rs  tray.rs  yara.rs
(+58 files in other folders)
